KUSTOMIZE/letsencrypt/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace : standard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: fastapi-tls-secret
      hosts:
        - k8s.cours-datascientest-lbaxel.cloudns.be	
  rules:
  - host: k8s.cours-datascientest-lbaxel.cloudns.be	
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 8000
